--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.4.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "foreman": "^3.0.1",
@@ -17,7 +18,9 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
+    "@types/ioredis": "^4.17.11",
     "@types/node": "^12.12.9",
+    "env-cmd": "^10.1.0",
     "nodemon": "^1.19.4",
     "typescript": "^4.1.3"
   }
