--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nf start"
   },
   "author": "",
   "license": "ISC",
+  "jest": {
+    "testEnvironment": "node"
+  },
   "dependencies": {
     "@sendgrid/mail": "^7.4.1",
     "body-parser": "^1.19.0",
@@ -19,9 +22,12 @@
   "devDependencies": {
     "@types/express": "^4.17.2",
     "@types/ioredis": "^4.17.11",
+    "@types/jest": "^26.0.20",
     "@types/node": "^12.12.9",
     "env-cmd": "^10.1.0",
+    "jest": "^26.6.3",
     "nodemon": "^1.19.4",
+    "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
   }
 }
