--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@types/ioredis": "^4.17.11",
     "@types/jest": "^26.0.20",
     "@types/node": "^12.12.9",
-    "env-cmd": "^10.1.0",
+    "dotenv-flow": "^3.2.0",
     "jest": "^26.6.3",
     "nodemon": "^1.19.4",
     "ts-jest": "^26.4.4",
