--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "foreman": "^3.0.1",
-    "node-resque": "^8.2.0"
+    "node-resque": "^8.2.0",
+    "pg": "^8.5.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.30"
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
