--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "nf start"
+    "start": "nf start",
+    "migration:run": "typeorm migration:run",
+    "migration:revert": "typeorm migration:revert"
   },
   "author": "",
   "license": "ISC",
@@ -27,9 +29,11 @@
     "@types/ioredis": "^4.17.11",
     "@types/jest": "^26.0.20",
     "@types/node": "^12.12.9",
+    "@types/supertest": "^2.0.10",
     "dotenv-flow": "^3.2.0",
     "jest": "^26.6.3",
     "nodemon": "^1.19.4",
+    "supertest": "^6.1.1",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
   }
