--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,14 @@ jobs:
           postgresql db: node_test
           postgresql user: test
           postgresql password: test1123
+          
+      - name: Run migrations
+        run: npm run migration:run
+        env:
+          POSTGRES_HOST: localhost
+          POSTGRES_USERNAME: test
+          POSTGRES_PASSWORD: test1123
+          NODE_ENV: test
 
       - name: Run specs
         run: npm test
