--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
           postgresql user: test
           postgresql password: test1123
           
-      - run: npx tsc
+      - run: npm run compile
       - run: npm run migration:run
         env:
           POSTGRES_HOST: localhost
