--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "understanding-ts",
+  "engines": { "node" : "=14.15.4" },
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
