--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "understanding-ts",
-  "engines": { "node" : "=14.15.4" },
+  "engines": {
+    "node": "=14.15.4"
+  },
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "postinstall": "npm run migration:run",
     "test": "jest",
     "start": "nf start",
     "compile": "rm -rf dist; tsc",
