--- a/.cloud66/deploy_hooks.yml
+++ b/.cloud66/deploy_hooks.yml
@@ -1,11 +1,9 @@
 production:
 staging:
-  last_thing:
-    - inline: |
-
-        #!/usr/bin/env bash
-        npm run compile
-        npm run migration:run
+  after_bundle:
+    - command: npm run compile
       target: any
       execute: true
-      apply_during: all
+    - command: npm run migration:run
+      target: any
+      execute: true
