--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,6 @@ jobs:
         with:
           node-version: '14.15.4'
 
-      - run: npm ci
-
       - name: Setup PostgreSQL
         uses: harmon758/postgresql-action@v1.0.0
         with:
@@ -24,6 +22,13 @@ jobs:
           postgresql db: node_test
           postgresql user: test
           postgresql password: test1123
+          
+      - run: npm ci
+        env:
+          POSTGRES_HOST: localhost
+          POSTGRES_USERNAME: test
+          POSTGRES_PASSWORD: test1123
+          NODE_ENV: test
           
       - run: npm run compile
       - run: npm run migration:run
