--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^9.1.1",
-    "typeorm": "^0.2.30"
+    "typeorm": "^0.2.30",
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
@@ -40,7 +41,6 @@
     "jest": "^26.6.3",
     "nodemon": "^1.19.4",
     "supertest": "^6.1.1",
-    "ts-jest": "^26.4.4",
-    "typescript": "^4.1.3"
+    "ts-jest": "^26.4.4"
   }
 }
