--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "jest",
     "start": "nf start",
     "compile": "rm -rf dist; tsc",
-    "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run",
+    "migration:run": "npx typeorm migration:run",
+    "migration:run:test": "ts-node ./node_modules/typeorm/cli.js migration:run",
     "migration:revert": "ts-node ./node_modules/typeorm/cli.js migration:revert"
   },
   "author": "",
@@ -27,8 +28,7 @@
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^9.1.1",
-    "typeorm": "^0.2.30",
-    "typescript": "^4.1.3"
+    "typeorm": "^0.2.30"
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
@@ -40,6 +40,7 @@
     "jest": "^26.6.3",
     "nodemon": "^1.19.4",
     "supertest": "^6.1.1",
-    "ts-jest": "^26.4.4"
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.1.3"
   }
 }
