--- a/.cloud66/deploy_hooks.yml
+++ b/.cloud66/deploy_hooks.yml
@@ -2,10 +2,14 @@ production:
 staging:
   last_thing:
     - inline: |
-        
+
         #!/usr/bin/env bash
         web_container_id=$(docker ps -qf name=^web.* | tail -1)
-        [ ! -z "$web_container_id" ] && docker exec -i $web_container_id npm run migration:run
+
+        if [ ! -z "$web_container_id" ]
+        then
+          docker exec -i $web_container_id npm run migration:run
+        fi
       target: node
       run_on: single_server
       execute: true
