--- a/.cloud66/deploy_hooks.yml
+++ b/.cloud66/deploy_hooks.yml
@@ -5,10 +5,7 @@ staging:
 
         #!/usr/bin/env bash
         web_container_id=$(docker ps -qf name=^web.* | tail -1)
-        if [[ ! -z "$web_container_id" ]]
-        then
-          
-        fi
+        docker exec -i $web_container_id npm run migration:run
       target: node
       run_on: single_server
       execute: true
